# editorial-automation-toolkit

./: .gitignore  LICENSE  README.md
article-image-extractor/: README.md  cf_browser_fetch.py  download.sh  download_images.py  image-downloader-web.service  open_urls_in_browser.bat  pyproject.toml  requirements.txt  site_extractors.py  urls.example.txt  web_app.py
article-image-extractor/tests/: conftest.py  test_filters.py  test_helpers.py  test_ui_element_charact.py
news-monitoring-pipeline/: README.md  news_scraper.py  requirements.txt
